--- a/Lab01_Software Engineering Concept Review/5803_ProblemSet_Tyche.ipynb
+++ b/Lab01_Software Engineering Concept Review/5803_ProblemSet_Tyche.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/nclnngzmn/CpE-AIML/blob/main/58033_ProblemSet_Tyche.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https:https://colab.research.google.com/drive/1DHizLzMnF7TNZnC7DHEL3SnsCJl-YNXq\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
