--- a/58034_Lab02_Tyche.ipynb
+++ b/58034_Lab02_Tyche.ipynb
@@ -50,7 +50,7 @@
         "import numpy as np\n",
         "from numpy import random"
       ],
-      "execution_count": 37,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -79,13 +79,12 @@
         "\n",
         "  def getLoss(self): #Eq. 3.4\n",
         "    m = self.y_GndTruth.shape[0]\n",
-        "    yt = self.y_GndTruth.transpose()\n",
-        "\n",
-        "    lossEq= (-1*yt)*(np.log(self.activation)) - ((1-self.y_GndTruth).transpose())*(np.log(1-self.activation))\n",
+        "    yt = self.y_GndTruth.transpose()    \n",
+        "    lossEq = (-1*yt)*np.sum(np.multiply(np.log(self.activation), self.y_GndTruth)) - ((1-self.y_GndTruth).transpose())*(np.log(1-self.activation))\n",
         "    self.J = (1/m)*lossEq\n",
         "    return self.J"
       ],
-      "execution_count": 39,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -102,7 +101,7 @@
         "y = np.random.randint(0,2, size=(m,1))\n",
         "Regression = LRegression(X, y, theta)"
       ],
-      "execution_count": 40,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -112,22 +111,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Qsk6Yc1J3BJv",
-        "outputId": "9269db69-8699-4274-f9f8-34ebacd2ee8d"
+        "outputId": "6d88b5f5-92f3-4215-a6a5-c5bb579e5d8e"
       },
       "source": [
         "Regression.getVectorMagnitude()"
       ],
-      "execution_count": 41,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7891778993674957"
+              "1.5202314307868783"
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 10
         }
       ]
     },
@@ -156,24 +155,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_9oJcScfE7lN",
-        "outputId": "c8a6bb41-e90c-4366-f6a0-9579e308aec4"
+        "outputId": "03a9b42b-f92d-4beb-eb6c-7813e6032b62"
       },
       "source": [
         "Regression.getZ()"
       ],
-      "execution_count": 42,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[-1.3802192 ],\n",
-              "       [-2.24928817],\n",
-              "       [-1.87928157]])"
+              "array([[3.30956746],\n",
+              "       [8.1821339 ],\n",
+              "       [3.75506618]])"
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 11
         }
       ]
     },
@@ -211,24 +210,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "262c8b46-c386-4b6f-e86a-ccd0e0508921"
+        "outputId": "d8b31941-10b1-477c-9929-20679c4449d8"
       },
       "source": [
         "Regression.getActivation()"
       ],
-      "execution_count": 43,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.7990262 ],\n",
-              "       [0.90458912],\n",
-              "       [0.86752858]])"
+              "array([[0.03524442],\n",
+              "       [0.00027953],\n",
+              "       [0.02286391]])"
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 12
         }
       ]
     },
@@ -257,24 +256,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sYGESqrIg6Ol",
-        "outputId": "e33f34a7-4f64-48c0-a709-02c481a676d3"
+        "outputId": "1894130c-a77f-4a15-f771-316c51e7159a"
       },
       "source": [
         "Regression.getLoss()"
       ],
-      "execution_count": 44,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.07478718, 0.07478718, 0.07478718],\n",
-              "       [0.03342482, 0.03342482, 0.03342482],\n",
-              "       [0.04736894, 0.04736894, 0.04736894]])"
+              "array([[1.19601662e-02, 2.72747115e+00, 1.19601662e-02],\n",
+              "       [9.31885243e-05, 2.72747115e+00, 9.31885243e-05],\n",
+              "       [7.70978151e-03, 2.72747115e+00, 7.70978151e-03]])"
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 13
         }
       ]
     }
