--- a/58034_Lab02_Tyche.ipynb
+++ b/58034_Lab02_Tyche.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/nclnngzmn/CpE-AIML/blob/main/58034_Lab02_Tyche.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/drive/1seYGbBHco1FdwJEdLrv2GcqJkoqVAuPp\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
