--- a/58034_Lab02_Tyche.ipynb
+++ b/58034_Lab02_Tyche.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/drive/1seYGbBHco1FdwJEdLrv2GcqJkoqVAuPp\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/nclnngzmn/CpE-AIML/blob/main/58034_Lab02_Tyche.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -50,7 +50,7 @@
         "import numpy as np\n",
         "from numpy import random"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,12 +79,12 @@
         "\n",
         "  def getLoss(self): #Eq. 3.4\n",
         "    m = self.y_GndTruth.shape[0]\n",
-        "    yt = self.y_GndTruth.transpose()    \n",
-        "    lossEq = (-1*yt)*np.sum(np.multiply(np.log(self.activation), self.y_GndTruth)) - ((1-self.y_GndTruth).transpose())*(np.log(1-self.activation))\n",
+        "    yt = self.y_GndTruth.transpose()      \n",
+        "    lossEq = np.sum((-1*yt)*(np.log(self.activation)) - ((1-self.y_GndTruth).transpose())*(np.log(1-self.activation)))\n",
         "    self.J = (1/m)*lossEq\n",
         "    return self.J"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,13 +95,27 @@
       "source": [
         "X = np.array([[2,4,6],\n",
         "              [1,7,9],\n",
-        "              [3,5,8],])\n",
+        "              [3,5,8]])\n",
         "m = X.shape[1]\n",
         "theta = np.random.normal(0, 1, size=(m, 1))\n",
         "y = np.random.randint(0,2, size=(m,1))\n",
         "Regression = LRegression(X, y, theta)"
       ],
-      "execution_count": 9,
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "64iTVwLo_l8O"
+      },
+      "source": [
+        "#Checking\n",
+        "#X_c = np.random.random((300,5))*100\n",
+        "#theta_c = np.random.random((300,1))\n",
+        "#y_c = np.random.randint(0,2,(300,1))"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,22 +125,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Qsk6Yc1J3BJv",
-        "outputId": "6d88b5f5-92f3-4215-a6a5-c5bb579e5d8e"
+        "outputId": "37c7d4ca-b18f-4be5-eab1-e2beeecfdbdc"
       },
       "source": [
         "Regression.getVectorMagnitude()"
       ],
-      "execution_count": 10,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.5202314307868783"
+              "0.2652401539986492"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 39
         }
       ]
     },
@@ -155,24 +169,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_9oJcScfE7lN",
-        "outputId": "03a9b42b-f92d-4beb-eb6c-7813e6032b62"
+        "outputId": "b0c4b955-565f-488c-f480-58bf70f9cbcc"
       },
       "source": [
         "Regression.getZ()"
       ],
-      "execution_count": 11,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[3.30956746],\n",
-              "       [8.1821339 ],\n",
-              "       [3.75506618]])"
+              "array([[-0.59073824],\n",
+              "       [-0.89196266],\n",
+              "       [-0.74918328]])"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 40
         }
       ]
     },
@@ -210,24 +224,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d8b31941-10b1-477c-9929-20679c4449d8"
+        "outputId": "993c280e-ddd6-461d-b5fb-c4f8734854fb"
       },
       "source": [
         "Regression.getActivation()"
       ],
-      "execution_count": 12,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.03524442],\n",
-              "       [0.00027953],\n",
-              "       [0.02286391]])"
+              "array([[0.64353451],\n",
+              "       [0.70929503],\n",
+              "       [0.67900071]])"
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 41
         }
       ]
     },
@@ -256,24 +270,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sYGESqrIg6Ol",
-        "outputId": "1894130c-a77f-4a15-f771-316c51e7159a"
+        "outputId": "1d900b4e-e8ee-4b74-a988-6020c4075ee3"
       },
       "source": [
         "Regression.getLoss()"
       ],
-      "execution_count": 13,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1.19601662e-02, 2.72747115e+00, 1.19601662e-02],\n",
-              "       [9.31885243e-05, 2.72747115e+00, 9.31885243e-05],\n",
-              "       [7.70978151e-03, 2.72747115e+00, 7.70978151e-03]])"
+              "1.915357828438457"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 42
         }
       ]
     }
